[gd_scene load_steps=5 format=3 uid="uid://c8we47axkyntg"]

[ext_resource type="Script" path="res://scripts/cherry.gd" id="1_3gu0n"]
[ext_resource type="Texture2D" uid="uid://bwgtnxcblveq6" path="res://assets/Gen 3 Berries/berry.png" id="2_fmm7m"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cb71j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_fmm7m")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_5iia3"]
radius = 47.1699

[node name="cherry" type="StaticBody2D"]
script = ExtResource("1_3gu0n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 4.76837e-07)
scale = Vector2(0.231314, 0.238208)
sprite_frames = SubResource("SpriteFrames_cb71j")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_5iia3")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
